# fredy

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  lefthook.yml  mkdocs.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  sonar-project.properties
services/confluence-importer/: .dockerignore  Dockerfile  README.md  eslint.config.js  package.json  pyproject.toml  vitest.config.ts
services/confluence-importer/src/: config.ts  index.ts
services/confluence-importer/src/__tests__/: config.test.ts  logger.test.ts  tracing.test.ts
services/confluence-importer/src/chunking/: html-chunker.ts  index.ts  tokenizer.ts
services/confluence-importer/src/confluence/: client.ts  types.ts
services/confluence-importer/src/confluence_importer/: __init__.py  cli.py  config.py  logging.py  profiles.py  retry.py  scheduler.py
services/confluence-importer/src/embeddings/: cohere.ts  voyage.ts
services/confluence-importer/src/local/: chunker.ts  client.ts  index.ts  types.ts
services/confluence-importer/src/pgvector/: client.ts  index.ts
services/confluence-importer/src/pipeline/: chunk-batch.ts  index.ts  ingest-local.ts  ingest.ts  sync.ts
services/confluence-importer/src/scheduler/: cron.ts
services/confluence-importer/src/utils/: retry.ts
services/confluence-importer/tests/: conftest.py  fakes.py  test_cli.py  test_config.py  test_logging.py  test_profiles.py  test_retry.py  test_scheduler.py
services/confluence-importer/tests/chunking/: test_fixed_size.py  test_html_section.py  test_html_to_text.py  test_recursive.py  test_tokenizer.py
services/confluence-importer/tests/confluence/: test_client.py  test_url_validator.py
services/confluence-importer/tests/embeddings/: test_cohere.py  test_openai.py  test_voyage.py
services/confluence-importer/tests/media/: test_attachments.py
services/confluence-importer/tests/pipeline/: test_ingest.py  test_local_files.py  test_sync.py
services/eval/: .gitignore  README.md  eslint.config.js  package.json  pyproject.toml  vitest.config.ts
services/eval/src/: index.ts
services/eval/tests/: fakes.py  test_anthropic_client.py  test_cli.py  test_compare.py  test_concurrency.py  test_config.py  test_dataset_loader.py  test_embeddings.py  test_generate.py  test_jsonl_writer.py  test_metrics_hit_rate.py  test_metrics_mrr.py  test_metrics_ndcg.py  test_metrics_precision.py  test_metrics_recall.py  test_report.py  test_rerank.py  test_rng.py  test_runner.py  test_sampler.py  test_store_pgvector.py
(+523 files in other folders)
